dmg packaging